[gd_scene load_steps=6 format=1]

[ext_resource path="res://Enemies/Spearfischer/Scripts/EnemySpearFischer.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Spearfischer/Sprites/spearfischer_00000.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Manmoth/Sprites/hitbox.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 28.9399, 49.8119 )

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SpearFischer" type="KinematicBody2D"]

transform/pos = Vector2( 529.076, 257.755 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3.22638, 14.6979 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="SpearFischerSprites" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "default"

[node name="SpearFischerHitbox" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -3.22638, 14.6979 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0


